# TP_practica

./: README.md
EX2/2025_2/: comentarios.csv  infracciones_drones.csv  streamers.csv  transmisiones.csv
EX2/Taller 2026_1/Pregunta_1/: CMakeLists.txt  main.cpp
EX2/Taller 2026_1/Pregunta_1/Bibliotecas/: Funciones.cpp  Funciones.hpp  Utils.hpp
EX2/Taller 2026_1/Pregunta_1/Estructuras/: Cliente.hpp  Cuenta.hpp  TipoCliente.hpp  Transaccion.hpp
Lab 10/2025_2/: CMakeLists.txt  main.cpp
Lab 10/2026_1/: CMakeLists.txt  Resolución de la PD 07.xlsx  main.cpp
Lab 10/2026_1/Bibliotecas/: Funciones.cpp  Funciones.hpp  Utils.hpp
Lab 10/2026_1/Estructuras/: Atencion.hpp  Codigo.hpp  Fecha.hpp  Hora.hpp  ListaMedicosTAD.hpp  Medico.hpp  Nodo.hpp
Lab 5/2025-1/: main.cpp
Lab 5/2025-2/: main.cpp
Lab2/Lab2 - 2025_2/: CMakeLists.txt  main.cpp
Lab3/2025_1/: main.cpp
Lab3/2025_2/: main.cpp
Lab3/2026_1/: CMakeLists.txt  main.cpp
Lab4/2025_2/: main.cpp
Lab4/2026_1 Adaptado/: CMakeLists.txt  main.cpp
Lab6/2024_2/: CMakeLists.txt  main.cpp
Lab6/2025_1/: main.cpp
Lab6/prueba/: CMakeLists.txt
Lab7/2024_2/: CMakeLists.txt  main.cpp
Lab7/2025_1/: CMakeLists.txt  main.cpp
Lab7/2025_2/: CMakeLists.txt  main.cpp
Lab8/2024_2/: CMakeLists.txt  main.cpp
Lab8/2024_2/Bibliotecas/: Funciones.cpp  Funciones.hpp  Utils.hpp
Lab8/2024_2/Estructuras/: Cliente.hpp  Distrito.hpp  Plato.hpp  PlatoPedido.hpp
Lab8/2025_1/: CMakeLists.txt  main.cpp
Lab8/2025_2/: CMakeLists.txt  main.cpp
Lab9/2025_2/: CMakeLists.txt  main.cpp
Lab9/2026_adaptado/: CMakeLists.txt  main.cpp
Lab9/2026_adaptado/Bibliotecas/: Funciones.cpp  Funciones.hpp  Utils.hpp
Lab9/2026_adaptado/Estructuras/: Atencion.hpp  Codigo.hpp  Fecha.hpp  Hora.hpp  Medico.hpp
(+144 files in other folders)
